@@ -1,3 +1,8 @@
+2008-04-05  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-parser.c (header_parse): Fixed a memory leak in the
+	case of an invalid header.
+
 2008-02-16  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
